fix bottom whitespace

--- a/style/litewrite.css
+++ b/style/litewrite.css
@@ -21,8 +21,8 @@ body>.scrollbox{width:84%; position: fixed;}
 	-moz-box-sizing:border-box; -webkit-box-sizing:border-box; -ms-box-sizing:border-box; box-sizing:border-box;
 	position: absolute;
 	width: 96%;
-	margin: 3.5% 0 20% 4%; /* make sure cursor is not hidden in very top left corner */
-	padding: 0 20% 0 0;
+	margin: 3.5% 0 0 4%; /* make sure cursor is not hidden in very top left corner */
+	padding: 0 20% 15% 0;
 	min-height: 100%;
 	font:normal 28px/150% 'Alegreya',Georgia,serif;
 	outline:none; overflow:auto; border:none;
